Fix semitransparent edge from blur transition on mobile

--- a/style.css
+++ b/style.css
@@ -160,6 +160,8 @@ body.nav-open {
 
 .photo {
   width: 100%;
+  overflow: hidden;
+  transform: translate3d(0, 0, 0);
 }
 
 .photo--lazy {
